Add example and asset

--- a/apps/minio/data.yaml
+++ b/apps/minio/data.yaml
@@ -2,7 +2,7 @@ tags:
   - Storage
 title: "MinIO"
 summary: "MinIO is an object storage solution that provides an Amazon Web Services S3-compatible API and supports all core S3 features."
-logo: "https://min.io/resources/img/logo.svg"
+logo: "./assets/minio-logo.svg"
 description: |
   MinIO is a High Performance Object Storage released under GNU Affero General Public License v3.0.
   It is API compatible with Amazon S3 cloud storage service.
