--- a/apps/aws-cloud-controller-manager/example/Chart.yaml
+++ b/apps/aws-cloud-controller-manager/example/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-name: minio
+name: aws-cloud-controller-manager
 type: application
 version: 0.0.8
 dependencies:
-  - name: minio
+  - name: aws-cloud-controller-manager
     version: 0.0.8
     repository: https://kubernetes.github.io/cloud-provider-aws
